traversal.snake.Snake.scala.error
Compilation error:
Snake:21: error: not found: value move
    move()
    ^